[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bss-rebalancing"
version = "1.1.0"
description = "Fully Dynamic Rebalancing of Dockless Bike Sharing Systems using Deep Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.11"
license = "CC-BY-NC-4.0"
authors = [
    {name = "Edoardo Scarpel", email = "edoardo.scarpel@phd.unipd.it"}
]
keywords = [
    "bike-sharing",
    "reinforcement-learning",
    "deep-learning",
    "urban-mobility",
    "rebalancing",
    "deep-q-network",
    "gymnasium"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "bss-preprocessing @ file:src/bss_rebalancing/preprocessing",
    "bss-gymnasium-env @ file:src/bss_rebalancing/gymnasium_env",
    "bss-rl-training @ file:src/bss_rebalancing/rl_training",
    "bss-benchmark @ file:src/bss_rebalancing/benchmark",
    "bss-results-webapp @ file:src/bss_rebalancing/results_webapp",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/edos08/BSS-DynamicRebalancing-RL"
Repository = "https://github.com/edos08/BSS-DynamicRebalancing-RL"
Thesis = "https://hdl.handle.net/20.500.12608/84368"
Issues = "https://github.com/edos08/BSS-DynamicRebalancing-RL/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.json"]