[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bss-gymnasium-env"
version = "1.1.0"
description = "Gymnasium environment for BSS Dynamic Rebalancing RL project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "gymnasium",
    "osmnx",
    "networkx",
    "geopandas",
    "matplotlib",
    "geopy",
    "shapely",
    "torch",
    "scipy",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
