[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bss-gymnasium-env"
version = "1.1.0"
description = "Gymnasium environments for bike-sharing system dynamic rebalancing RL"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Edoardo Scarpel", email = "edoardo.scarpel@phd.unipd.it"}
]
requires-python = ">=3.11"
keywords = [
    "reinforcement-learning",
    "bike-sharing",
    "rebalancing",
    "gymnasium",
    "simulation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "polars>=1.38.0",
    "tqdm>=4.66.0",
    "gymnasium>=1.0.0",
    "osmnx>=2.0.0",
    "networkx>=3.3",
    "geopandas>=0.14.4",
    "matplotlib>=3.10.0",
    "geopy>=2.4.0",
    "shapely>=2.1.0",
    "torch>=2.7.0",
    "scipy>=1.16.0",
    "scikit-learn>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]

[project.urls]
Homepage = "https://github.com/edos08/BSS-DynamicRebalancing-RL"
Documentation = "https://github.com/edos08/BSS-DynamicRebalancing-RL/tree/main/gymnasium_env"
Repository = "https://github.com/edos08/BSS-DynamicRebalancing-RL"
Issues = "https://github.com/edos08/BSS-DynamicRebalancing-RL/issues"

[tool.setuptools.packages.find]
where = ["src"]
